--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #FFF4E3;
+  background: #212121;
 }
 
 code {
