replaced inline style objects with css module files

--- a/client/src/components/AddHabits.module.css
+++ b/client/src/components/AddHabits.module.css
@@ -9,3 +9,12 @@
 .submit{
     padding: 1em;
 }
+
+.card{
+    margin-top: 1em;
+    padding: .3em;
+    width: 70%;
+    display: inline-block;
+    background: #424242;
+    text-align: left;
+}
