removed unused imports

--- a/client/src/components/Habit.module.css
+++ b/client/src/components/Habit.module.css
@@ -17,7 +17,7 @@
     background-Color: #43a047;
     width: 2em;
     height: 1em;
-    color: #f44336;
+    color: #43a047;
     outline: none;
     border: none;
 }
