--- a/client/src/components/Habits.module.css
+++ b/client/src/components/Habits.module.css
@@ -50,7 +50,6 @@
 }
 
 .app{
-    display: flex;
     width: 100%;
     min-height: 100vh;
 }
@@ -61,9 +60,8 @@
     bottom: 0;
     background-color: #757575;
     height: 100vh;
-    min-width: 20%;
-    max-width: 20%;
-    flex: 1;
+    width: 20vw;
+    position: fixed;
 }
 
 .sidebarDate{
@@ -92,9 +90,14 @@
     font-weight: 500;
 }
 
+.main{
+    display: grid;
+    grid-template-columns: 20vw auto;
+}
+
 .habits{
     width: 100%;
-    flex: 1;
+    grid-column-start: 2;
     text-align: center;
 }
 
