Fixed MarkComplete bug

--- a/client/src/components/AddHabits.module.css
+++ b/client/src/components/AddHabits.module.css
@@ -13,10 +13,10 @@
 .card{
     margin-top: 1em;
     padding: .3em;
-    width: 70%;
+    width: 50%;
     display: inline-block;
     background: #424242;
-    text-align: left;
+    text-align: center;
     animation: fade 1s ease;
 }
 
