--- a/client/src/components/Habits.module.css
+++ b/client/src/components/Habits.module.css
@@ -56,7 +56,7 @@
 
 .sidebar {
     left: 0;
-    top: 0;
+    top: 10vh;
     bottom: 0;
     background-color: #757575;
     height: 100vh;
@@ -96,6 +96,7 @@
 }
 
 .habits{
+    margin-top: 10vh;
     width: 100%;
     grid-column-start: 2;
     text-align: center;
