--- a/client/src/components/Navbar.module.css
+++ b/client/src/components/Navbar.module.css
@@ -5,10 +5,11 @@ header{
     left: 0;
     right: 0;
     width: 100%;
-    height: 5vh;
+    height: 10vh;
     margin: auto;
-    padding-left: 15%;
+    padding-left: 5%;
     padding-right: 15%;
     align-items: center;
-    z-index:-1;
+    background: #333;
+    color: #fafafa;
 }
