--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -36,7 +36,7 @@
 
 .card{
     margin-top: 1em;
-    min-width: 70%;
+    min-width: 60%;
     max-width: 70vw;
     width: 70wv;
     display: inline-block;
@@ -46,7 +46,7 @@
 
 .presentation{
     display: flex;
-    width: 80%;
+    width: 90%;
     margin: auto;
     min-height: 90vh;
     align-items: center;
@@ -55,7 +55,8 @@
 }
 
 .introduction {
-    flex: 1;
+    margin-top: 10vh;
+    flex: 2;
 }
 
 .svg {
@@ -105,6 +106,7 @@
 }
 
 .loginRegister {
+    margin-top: 10vh;
     flex: 1;
 }
 
