--- a/client/src/components/Habits.module.css
+++ b/client/src/components/Habits.module.css
@@ -102,6 +102,20 @@
     text-align: center;
 }
 
+.error{
+    animation: fadeOut 10s forwards;
+}
+
+@keyframes fadeOut{
+    0%{
+        opacity: 1;
+    }75%{
+        opacity: 1;
+    }100%{
+        opacity: 0;
+    }
+}
+
 @keyframes fade{
     0%{
         opacity: 0;
